--- a/app/vues/templates/frontend/vAccueil.twig
+++ b/app/vues/templates/frontend/vAccueil.twig
@@ -158,9 +158,7 @@
 				</h3>
 				<!-- metadonnes enchère -->
 				<aside>
-					<span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi enim laborum
-																																																																																																																																																																																																																																		                                    expedita fugiat quam, esse ut? Molestiae voluptate adipisci, ullam, quidem nisi
-																																																																																																																																																																																																																																		                                    minus aliquam quisquam neque rerum inventore explicabo deserunt...</span>
+					<span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi enim laborum expedita fugiat quam, esse ut? Molestiae voluptate adipisci, ullam, quidem nisi minus aliquam quisquam neque rerum inventore explicabo deserunt...</span>
 				</aside>
 				<!-- bouton Lire l'article -->
 				<footer>
@@ -175,9 +173,7 @@
 					<a href="#">Enchères</a>
 				</h3>
 				<aside>
-					<span>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Neque, quas, maiores
-																																																																																																																																																																																																																																		                                    expedita libero eius facere, magnam dolore laudantium doloremque aspernatur fugiat
-																																																																																																																																																																																																																																		                                    atque quaerat alias eveniet ex cum modi totam iusto?...</span>
+					<span>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Neque, quas, maiores expedita libero eius facere, magnam dolore laudantium doloremque aspernatur fugiat atque quaerat alias eveniet ex cum modi totam iusto?...</span>
 				</aside>
 				<footer>
 					<a class="stampcard-button-cta" href="#">Lire l'article</a>
@@ -190,9 +186,7 @@
 					<a href="#">Bridge</a>
 				</h3>
 				<aside>
-					<span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem libero minima rem
-																																																																																																																																																																																																																																		                                    dignissimos sapiente fuga, maiores illum distinctio, beatae architecto aspernatur
-																																																																																																																																																																																																																																		                                    consectetur voluptatem id quia sit explicabo dicta delectus commodi!...</span>
+					<span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem libero minima rem dignissimos sapiente fuga, maiores illum distinctio, beatae architecto aspernatur consectetur voluptatem id quia sit explicabo dicta delectus commodi!...</span>
 				</aside>
 				<footer>
 					<a class="stampcard-button-cta" href="#">Lire l'article</a>
@@ -205,29 +199,20 @@
 					<a href="#">Enchères</a>
 				</h3>
 				<aside>
-					<span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores amet voluptates,
-																																																																																																																																																																																																																																		                                    quos accusamus fugit perspiciatis fugiat eaque. Nulla, eius quo quas cupiditate
-																																																																																																																																																																																																																																		                                    accusamus doloribus officiis, cum laboriosam harum, praesentium rem!...</span>
+					<span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores amet voluptates, quos accusamus fugit perspiciatis fugiat eaque. Nulla, eius quo quas cupiditate accusamus doloribus officiis, cum laboriosam harum, praesentium rem!...</span>
 				</aside>
 				<footer>
 					<a class="stampcard-button-cta" href="#">Lire l'article</a>
 				</footer>
 			</div>
 		</article>
-		<article class="newscard">
-			<a href="#">
-				<picture>
-					<img src="assets/img/collection-royaute.webp" alt="Collection famille royale ">
-				</picture>
-			</a>
+		<article class="stampcard">
 			<div>
 				<h3>
-					<a href="#">Timbres</a>
+					<a href="#">Enchères</a>
 				</h3>
 				<aside>
-					<span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, quam. Nam
-																																																																																																																																																																																																																																		                                    laboriosam cum doloribus, quaerat provident velit magni, praesentium vel nihil
-																																																																																																																																																																																																																																		                                    debitis aliquam nobis assumenda inventore et! Voluptas, quae eligendi.</span>
+					<span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores amet voluptates, quos accusamus fugit perspiciatis fugiat eaque. Nulla, eius quo quas cupiditate accusamus doloribus officiis, cum laboriosam harum, praesentium rem!...</span>
 				</aside>
 				<footer>
 					<a class="stampcard-button-cta" href="#">Lire l'article</a>
