--- a/assets/css/components/catalogue-header.css
+++ b/assets/css/components/catalogue-header.css
@@ -20,3 +20,9 @@
 .catalogue-header a:hover {
 	font-weight: bold;
 }
+
+.catalogue-header-retour:hover {
+	cursor: pointer;
+	color: var(--color-red);
+	font-weight: bold;
+}
