--- a/app/vues/templates/frontend/vAccueil.twig
+++ b/app/vues/templates/frontend/vAccueil.twig
@@ -1,17 +1,6 @@
 <!-- carrousel nouveautés et à venir -->
 <section>
-	<h2>
-		<a href="#">Nos nouvelles enchères
-			<svg class="svg-icon right-arrow" role="img" xmlns="http://www.w3.org/2000/svg" viewbox="0 0 19.9 19.7">
-				<title>Right Arrow</title>
-				<desc>Right Arrow</desc>
-				<g class="right-arrow" fill="none" stroke="#000" stroke-width="2.5px" stroke-linecap="round" stroke-linejoin="round">
-					<polyline class="cls-1" points="17 6 23 12 17 18"/>
-					<line class="cls-1" x1="23" x2="1" y1="12" y2="12"/>
-				</g>
-			</svg>
-		</a>
-	</h2>
+	<h2>Nos nouvelles enchères</h2>
 
 	<div class="carrousel">
 		{% for enchere in nouveautes %}
@@ -71,18 +60,7 @@
 </section>
 <!-- carrousel coups de coeur du Lord -->
 <section>
-	<h2>
-		<a href="#">Les coups de coeur du lord
-			<svg class="svg-icon right-arrow" role="img" xmlns="http://www.w3.org/2000/svg" viewbox="0 0 19.9 19.7">
-				<title>Right Arrow</title>
-				<desc>Right Arrow</desc>
-				<g class="right-arrow" fill="none" stroke="#000" stroke-width="2.5px" stroke-linecap="round" stroke-linejoin="round">
-					<polyline class="cls-1" points="17 6 23 12 17 18"/>
-					<line class="cls-1" x1="23" x2="1" y1="12" y2="12"/>
-				</g>
-			</svg>
-		</a>
-	</h2>
+	<h2>Les coups de coeur du lord</h2>
 	<div class="carrousel">
 		{% for enchere in coupsCoeur %}
 			<article
@@ -137,18 +115,7 @@
 </section>
 <!-- carrousel actualités -->
 <section>
-	<h2>
-		<a href="#">Découvrez nos actualités
-			<svg class="svg-icon right-arrow" role="img" xmlns="http://www.w3.org/2000/svg" viewbox="0 0 19.9 19.7">
-				<title>Right Arrow</title>
-				<desc>Right Arrow</desc>
-				<g class="right-arrow" fill="none" stroke="#000" stroke-width="2.5px" stroke-linecap="round" stroke-linejoin="round">
-					<polyline class="cls-1" points="17 6 23 12 17 18"/>
-					<line class="cls-1" x1="23" x2="1" y1="12" y2="12"/>
-				</g>
-			</svg>
-		</a>
-	</h2>
+	<h2>Découvrez nos actualités</h2>
 	<div class="carrousel">
 		<article class="stampcard">
 			<div>
