--- a/app/vues/templates/frontend/vEnchere.twig
+++ b/app/vues/templates/frontend/vEnchere.twig
@@ -7,7 +7,7 @@
 		<!-- fil d'ariane -->
 		<ul>
 			<li>
-				<span class="catalogue-header-retour" onclick="history.back()">Retour</span>
+				<span class="catalogue-header-retour" onclick="history.back()">&#8592 Retour</span>
 			</li>
 		</div>
 		<!-- Fiche timbre -->
@@ -61,29 +61,41 @@
 				</tbody>
 			</table>
 			<section>
-				<ul>
-					<li>Date de début d'enchère:
-						{{ enchere.enchere_date_debut|date('d/m/Y') }}</li>
-					{% if enchere.heures_restant > 24 or enchere.heures_restant < 0 %}
-						<li>Date de fin d'enchère:
-							{{ enchere.enchere_date_fin|date('d/m/Y') }}</li>
-					{% elseif enchere.heures_restant > 0 %}
-						<li>Temps restant:
-							{{ enchere.heures_restant }}
-							heures</li>
-					{% endif %}
-					{% if enchere.heures_avant_debut <= 0 %}
-						<li>Nombre de mises:
-							{{ enchere.nb_mise }}</li>
-						<li>Mise
-							{{ enchere.heures_restant > 0 ? 'actuelle' : 'finale' }}:
-							{{ enchere.mise_actuelle|number_format(2, '.', ',') }}$</li>
-					{% endif %}
-					{% if enchere.enchere_coup_coeur %}
-						<li>Cette enchère est un coup de coeur du Lord Stampee !</li>
-					{% endif %}
+				<table>
+					<tbody>
+						<tr>
+							<th scope="row">Date de début d'enchère</th>
+							<td>{{ enchere.enchere_date_debut|date('d/m/Y') }}</td>
+						</tr>
+						{% if enchere.heures_restant > 24 or enchere.heures_restant < 0 %}
+							<tr>
+								<th scope="row">Date de fin d'enchère</th>
+								<td>{{ enchere.enchere_date_fin|date('d/m/Y') }}</td>
+							{% elseif enchere.heures_restant > 0 %}
+								<tr>
+									<th scope="row">Temps restant</th>
+									<td>{{ enchere.heures_restant }}
+										heures</td>
+								</tr>
+							{% endif %}
+							{% if enchere.heures_avant_debut <= 0 %}
+								<tr>
+									<th scope="row">Nombre de mises</th>
+									<td>{{ enchere.nb_mise }}</td>
+								</tr>
+								<tr>
+									<th scope="row">Mise
+										{{ enchere.heures_restant > 0 ? 'actuelle' : 'finale' }}</th>
+									<td>{{ enchere.mise_actuelle|number_format(2, '.', ',') }}$</td>
+								</tr>
+							{% endif %}
+						</table>
+					</tbody>
 				</ul>
 
+				{% if enchere.enchere_coup_coeur is same as 'oui' %}
+					<p class="h4">Cette enchère est un coup de coeur du Lord Stampee !</p>
+				{% endif %}
 
 				{% if (oUtilConn is null) %}
 					<h3>Vous devez vous inscrire ou vous connecter pour pouvoir miser sur une enchère !</h3>
@@ -101,7 +113,7 @@
 						<input type="hidden" name="mise_utilisateur_id" value={{ oUtilConn.utilisateur_id }}>
 						<input type="hidden" name="mise_enchere_id" value={{ enchere.enchere_id }}>
 
-						<input class="stampcard-button-cta" type="submit" value="Enchérir">
+						<input class="card-detail-bid-button" type="submit" value="Enchérir">
 					</form>
 				{% endif %}
 
