modif readme and add config for hostinger

--- a/app/vues/templates/frontend/modaleConnexion.twig
+++ b/app/vues/templates/frontend/modaleConnexion.twig
@@ -1,19 +1,29 @@
 <dialog id="modaleConnexion">
 	<section>
 		<h1>Connexion</h1>
+		<h3>Logins de tests</h3>
+		<span>
+			<strong>Profil Admin:</strong>
+			admin@stampee.com |
+			<strong>Mdp:</strong>
+			Stampee1234!</span>
+		<span></br>
+		<strong>Profil Membre:</strong>
+		membre@stampee.com |
+		<strong>MDP:</strong>
+		Stampee1234!</span>
 
-		<form name="frmConnexion" method="POST">
+	<form name="frmConnexion" method="POST">
 
-			<span id="messageErreurConnexion"></span>
+		<span id="messageErreurConnexion"></span>
 
-			<label>Courriel</label>
-			<input name="utilisateur_courriel" value="">
+		<label>Courriel</label>
+		<input name="utilisateur_courriel" value="">
 
-			<label>Mot de passe</label>
-			<input type="password" name="utilisateur_mdp" value="">
+		<label>Mot de passe</label>
+		<input type="password" name="utilisateur_mdp" value="">
 
-			<input type="submit" value="Envoyer">
+		<input type="submit" value="Envoyer">
 
-		</form>
-	</section>
-</dialog>
+	</form>
+</section></dialog>
