ajout section collection

--- a/app/vues/templates/frontend/vAccueil.twig
+++ b/app/vues/templates/frontend/vAccueil.twig
@@ -113,76 +113,105 @@
 		{% endfor %}
 	</div>
 </section>
-<!-- carrousel actualités -->
+<!-- carrousel collections -->
 <section>
-	<h2>Découvrez nos actualités</h2>
+	<h2>Découvrez nos collections inédites</h2>
 	<div class="carrousel">
-		<article class="stampcard">
+		<article
+			class="stampcard">
+			<!-- image -->
+			<a href="#">
+				<picture>
+					<img src="assets/img/collection-rare.webp" alt="Collection timbres rares">
+				</picture>
+			</a>
 			<div>
 				<!-- titre -->
 				<h3>
-					<a href="#">Timbres</a>
+					<a href="#">Timbres rares</a>
 				</h3>
 				<!-- metadonnes enchère -->
 				<aside>
-					<span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi enim laborum expedita fugiat quam, esse ut? Molestiae voluptate adipisci, ullam, quidem nisi minus aliquam quisquam neque rerum inventore explicabo deserunt...</span>
+					<span>Plus de 50 timbres inédits</span>
 				</aside>
-				<!-- bouton Lire l'article -->
+				<!-- boutons en savoir plus / like -->
 				<footer>
-					<a class="stampcard-button-cta" href="#">Lire l'article</a>
+					<a class="stampcard-button-cta" href="#">Voir la collection</a>
 					<!-- <a aria-label="bouton-like" class="stampcard-button-like" href="#"><i class="fa-regular fa-heart fa-xl"></a></i> -->
 				</footer>
 			</div>
 		</article>
-		<article class="stampcard">
+		<article
+			class="stampcard">
+			<!-- image -->
+			<a href="#">
+				<picture>
+					<img src="assets/img/collection-celebrities.webp" alt="Collection célébrités">
+				</picture>
+			</a>
 			<div>
 				<h3>
-					<a href="#">Enchères</a>
+					<a href="#">Célébrités</a>
 				</h3>
 				<aside>
-					<span>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Neque, quas, maiores expedita libero eius facere, magnam dolore laudantium doloremque aspernatur fugiat atque quaerat alias eveniet ex cum modi totam iusto?...</span>
+					<span>Plus de 500 timbres inédits</span>
 				</aside>
 				<footer>
-					<a class="stampcard-button-cta" href="#">Lire l'article</a>
+					<a class="stampcard-button-cta" href="#">Voir la collection</a>
 				</footer>
 			</div>
 		</article>
 		<article class="stampcard">
+			<a href="#">
+				<picture>
+					<img src="assets/img/collection-flore.webp" alt="Collection Faune et flore">
+				</picture>
+			</a>
 			<div>
 				<h3>
-					<a href="#">Bridge</a>
+					<a href="#">La faune et la flore</a>
 				</h3>
 				<aside>
-					<span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem libero minima rem dignissimos sapiente fuga, maiores illum distinctio, beatae architecto aspernatur consectetur voluptatem id quia sit explicabo dicta delectus commodi!...</span>
+					<span>Plus de 200 timbres inédits</span>
 				</aside>
 				<footer>
-					<a class="stampcard-button-cta" href="#">Lire l'article</a>
+					<a class="stampcard-button-cta" href="#">Voir la collection</a>
 				</footer>
 			</div>
 		</article>
 		<article class="stampcard">
+			<a href="#">
+				<picture>
+					<img src="assets/img/collection-olympics.webp" alt="Collection Jeux olympiques">
+				</picture>
+			</a>
 			<div>
 				<h3>
-					<a href="#">Enchères</a>
+					<a href="#">Jeux Olypiques</a>
 				</h3>
 				<aside>
-					<span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores amet voluptates, quos accusamus fugit perspiciatis fugiat eaque. Nulla, eius quo quas cupiditate accusamus doloribus officiis, cum laboriosam harum, praesentium rem!...</span>
+					<span>Plus de 300 timbres inédits</span>
 				</aside>
 				<footer>
-					<a class="stampcard-button-cta" href="#">Lire l'article</a>
+					<a class="stampcard-button-cta" href="#">Voir la collection</a>
 				</footer>
 			</div>
 		</article>
 		<article class="stampcard">
+			<a href="#">
+				<picture>
+					<img src="assets/img/collection-royaute.webp" alt="Collection famille royale ">
+				</picture>
+			</a>
 			<div>
 				<h3>
-					<a href="#">Enchères</a>
+					<a href="#">Famille royale</a>
 				</h3>
 				<aside>
-					<span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores amet voluptates, quos accusamus fugit perspiciatis fugiat eaque. Nulla, eius quo quas cupiditate accusamus doloribus officiis, cum laboriosam harum, praesentium rem!...</span>
+					<span>Plus de 150 timbres inédits</span>
 				</aside>
 				<footer>
-					<a class="stampcard-button-cta" href="#">Lire l'article</a>
+					<a class="stampcard-button-cta" href="#">Voir la collection</a>
 				</footer>
 			</div>
 		</article>
